Add html to index file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+    <header>
+        <h2>Welcome to this Quizz</h2>
+        <h1>
+            Let's test you!
+        </h1>
+        <div>
+            <p>Enter your username</p>
+            <form action="POST" id="start-form">
+                <label for="username">Username :</label>
+                <input type="text" id="username" name="username" min="4" required>
+                <input type="submit" value="Start">
+            </form>
+
+        </div>
+    </header>
 
 
     <script src="assets/js/script.js"></script>
