Add FrontAwesome in all pages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
 <body>
     <header>
-        <h2>Welcome to this Quizz</h2>
+        <h2>
+            Welcome to this Quizz
+        </h2>
         <h1>
             Let's test you!
+            <br>
+            <i class="fa-regular fa-circle-question"></i>
         </h1>
         <div>
             <p>Enter your username</p>
@@ -26,7 +30,7 @@
         </div>
     </header>
 
-
+    <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
