--- a/quizz.html
+++ b/quizz.html
@@ -11,7 +11,7 @@
 
 <body>
 
-
+    <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
