--- a/result.html
+++ b/result.html
@@ -12,6 +12,7 @@
 <body>
 
 
+    <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
