--- a/quizz.html
+++ b/quizz.html
@@ -10,6 +10,36 @@
 </head>
 
 <body>
+    <header>
+        <h1>
+            Let's test you!
+            <br>
+            <i class="fa-regular fa-circle-question"></i>
+        </h1>
+    </header>
+    <div id="quizz-area">
+        <form action="POST">
+            <div class="question-area">
+                <h3>History</h3>
+                <p class="question">What was the name of the first person to circumnavigate the globe?</p>
+                <input type="radio" name="answer-question1" id="answer1-question1">
+                <label for="answer1-question1">Christopher Columbus</label>
+                <input type="radio" name="answer-question1" id="answer2-question1">
+                <label for="answer2-question1">Ferdinand Magellan</label>
+                <input type="radio" name="answer-question1" id="answer3-question1">
+                <label for="answer3-question1">Marco Polo</label>
+            </div>
+
+            <input type="submit" value="Check your answers">
+
+
+
+        </form>
+
+
+    </div>
+
+
 
     <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
