Add result and feeback areas

--- a/quizz.html
+++ b/quizz.html
@@ -16,6 +16,12 @@
             <br>
             <i class="fa-regular fa-circle-question"></i>
         </h1>
+        <div id="result">
+            Your Score
+            <br>
+            <span id="score"></span>/7
+            <p id="feedback"></p>
+        </div>
     </header>
     <div id="quizz-area">
         <form action="POST">
@@ -28,17 +34,19 @@
                 <label for="answer2-question1">Ferdinand Magellan</label>
                 <input type="radio" name="answer-question1" id="answer3-question1">
                 <label for="answer3-question1">Marco Polo</label>
+                <div id="image-feedback1"></div>
             </div>
 
             <div class="question-area">
                 <h3>Geography</h3>
                 <p class="question">What is the largest country in Africa?</p>
                 <input type="radio" name="answer-question2" id="answer1-question2">
-                <label for="answer1-question1">Algeria</label>
+                <label for="answer1-question2">Algeria</label>
                 <input type="radio" name="answer-question2" id="answer2-question2">
                 <label for="answer2-question1">The Democratic Republic of the Congo</label>
                 <input type="radio" name="answer-question2" id="answer3-question2">
-                <label for="answer3-question1">Madagascar</label>
+                <label for="answer3-question2">Madagascar</label>
+                <div id="image-feedback2"></div>
             </div>
 
             <div class="question-area">
@@ -46,24 +54,26 @@
                 <p class="question">What is the name of the organization that aims to promote economic cooperation among
                     countries?</p>
                 <input type="radio" name="answer-question3" id="answer1-question3">
-                <label for="answer1-question1">The World Intellectual Property Organization</label>
+                <label for="answer1-question3">The World Intellectual Property Organization</label>
                 <input type="radio" name="answer-question3" id="answer2-question3">
-                <label for="answer2-question1">The Central Banks</label>
+                <label for="answer2-question3">The Central Banks</label>
                 <input type="radio" name="answer-question3" id="answer3-question3">
-                <label for="answer3-question1">The World Trade Organization</label>
+                <label for="answer3-question3">The World Trade Organization</label>
+                <div id="image-feedback3"></div>
             </div>
 
             <div class="question-area">
                 <h3>Economy</h3>
                 <p class="question">What is called a situation in which a single company or group owns all or nearly all
                     of the market for a given type of product or
-                    service ?</p>
+                    service?</p>
                 <input type="radio" name="answer-question4" id="answer1-question4">
                 <label for="answer1-question4">A monopoly</label>
                 <input type="radio" name="answer-question4" id="answer2-question4">
                 <label for="answer2-question4">A monopsony</label>
                 <input type="radio" name="answer-question4" id="answer3-question4">
                 <label for="answer3-question4">A oligopoly</label>
+                <div id="image-feedback4"></div>
             </div>
 
             <div class="question-area">
@@ -75,22 +85,24 @@
                 <label for="answer2-question5">The Hippopotamus</label>
                 <input type="radio" name="answer-question5" id="answer3-question5">
                 <label for="answer3-question5">The Blue whale</label>
+                <div id="image-feedback5"></div>
             </div>
 
             <div class="question-area">
                 <h3>English</h3>
                 <p class="question">What is the definition of “plethora”?</p>
                 <input type="radio" name="answer-question6" id="answer1-question6">
-                <label for="answer1-question6">The use of unnecessary words to express an idea</label>
+                <label for="answer1-question6">The use of unnecessary words to express an idea.</label>
                 <input type="radio" name="answer-question6" id="answer2-question6">
                 <label for="answer2-question6">A large or excessive amount of something.</label>
                 <input type="radio" name="answer-question6" id="answer3-question6">
                 <label for="answer3-question6">The state of being without or not having enough of something.</label>
+                <div id="image-feedback6"></div>
             </div>
 
             <div class="question-area">
                 <h3>Psychology</h3>
-                <p class="question">What is Bandwagon pressuring ?</p>
+                <p class="question">What is Bandwagon pressuring?</p>
                 <input type="radio" name="answer-question7" id="answer1-question7">
                 <label for="answer1-question7"> A type of advertising technique that aims to
                     convince people to do something because everyone
@@ -101,16 +113,13 @@
                 <input type="radio" name="answer-question7" id="answer3-question7">
                 <label for="answer3-question7">A technique that involves using celebrities or other well-known figures
                     to promote a product or service.</label>
+                <div id="image-feedback7"></div>
             </div>
 
             <input type="submit" value="Check your answers">
 
         </form>
-
-
     </div>
-
-
 
     <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
