Add css to index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="background">
+    <header class="background" id="welcome">
         <h2>
             Welcome to this Quizz
         </h2>
@@ -27,6 +27,7 @@
             <form action="POST" id="start-form">
                 <label for="username">Username :</label>
                 <input type="text" id="username" name="username" min="4" required>
+                <br>
                 <input type="submit" value="Start">
             </form>
 
