Add js main structure

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </h1>
         <div>
             <p>Enter your username</p>
-            <form action="POST" id="start-form">
+            <form action="POST" action="quizz.html" id="start-form">
                 <label for="username">Username :</label>
                 <input type="text" id="username" name="username" min="4" required>
                 <br>
-                <input type="submit" value="Start">
+                <input type="submit" id="start" value="Start">
             </form>
 
         </div>
