--- a/quizz.html
+++ b/quizz.html
@@ -186,7 +186,7 @@
                     <div id="image-feedback7"></div>
                 </div>
 
-                <input type="submit" value="Check your answers">
+                <input type="submit" id="check" value="Check your answers">
 
             </form>
         </div>
