Add username display mecanism and area

--- a/quizz.html
+++ b/quizz.html
@@ -17,7 +17,7 @@
 
         <header>
             <h1>
-                Let's test you!
+                Let's test you <span id="username-area"></span>!
                 <br>
                 <i class="fa-regular fa-circle-question"></i>
             </h1>
