Add getUsername function properties

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h1>
         <div>
             <p>Enter your username</p>
-            <form action="POST" action="quizz.html" id="start-form">
+            <form method="GET" action="quizz.html" id="start-form">
                 <label for="username">Username :</label>
                 <input type="text" id="username" name="username" min="4" required>
                 <br>
