Update subjects in HTML

--- a/quizz.html
+++ b/quizz.html
@@ -31,7 +31,7 @@
         <div id="quizz-area">
             <form action="POST">
                 <div class="question-area">
-                    <h3>History</h3>
+                    <h3 class="subject"></h3>
                     <ul>
                         <p class="question">What was the name of the first person to circumnavigate the globe?</p>
                         <li>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="question-area">
-                    <h3>Geography</h3>
+                    <h3 class="subject"></h3>
                     <p class="question">What is the largest country in Africa?</p>
                     <ul>
                         <li>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="question-area">
-                    <h3>Geopolitics</h3>
+                    <h3 class="subject"></h3>
                     <p class="question">What is the name of the organization that aims to promote economic
                         cooperation
                         among
@@ -94,12 +94,8 @@
                 </div>
 
                 <div class="question-area">
-                    <h3>Economy</h3>
-                    <p class="question">What is called a situation in which a single company or group owns all or
-                        nearly
-                        all
-                        of the market for a given type of product or
-                        service?</p>
+                    <h3 class="subject"></h3>
+                    <p class="question">What is called a situation in which a single company or group owns all or nearly all of the market for a given type of product or service?</p>
                     <ul>
                         <li>
                             <input type="radio" name="answer-question4" id="answer1-question4">
@@ -118,7 +114,7 @@
                 </div>
 
                 <div class="question-area">
-                    <h3>Nature</h3>
+                    <h3 class="subject"></h3>
                     <p class="question">What is the largest mammal on Earth?</p>
                     <ul>
                         <li>
@@ -138,7 +134,7 @@
                 </div>
 
                 <div class="question-area">
-                    <h3>English</h3>
+                    <h3 class="subject"></h3>
                     <p class="question">What is the definition of “plethora”?</p>
                     <ul>
                         <li>
@@ -151,15 +147,14 @@
                         </li>
                         <li>
                             <input type="radio" name="answer-question6" id="answer3-question6">
-                            <label for="answer3-question6">The state of being without or not having enough of
-                                something.</label>
+                            <label for="answer3-question6">The state of being without or not having enough of something.</label>
                         </li>
                     </ul>
                     <div id="image-feedback6"></div>
                 </div>
 
                 <div class="question-area">
-                    <h3>Psychology</h3>
+                    <h3 class="subject"></h3>
                     <p class="question">What is Bandwagon pressuring?</p>
                     <ul>
                         <li>
