Update quizz-area html

--- a/quizz.html
+++ b/quizz.html
@@ -32,157 +32,10 @@
             <form action="POST">
                 <div class="question-area">
                     <h3 class="subject"></h3>
-                    <ul>
-                        <p class="question">What was the name of the first person to circumnavigate the globe?</p>
-                        <li>
-                            <input type="radio" name="answer-question1" id="answer1-question1">
-                            <label for="answer1-question1">Christopher Columbus</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question1" id="answer2-question1">
-                            <label for="answer2-question1">Ferdinand Magellan</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question1" id="answer3-question1">
-                            <label for="answer3-question1">Marco Polo</label>
-                        </li>
-                        <div id="image-feedback1"></div>
-                    </ul>
+                    <div class="questions"></div>
+                    <div class="options"></div>
+                    <div id="image-feedback"></div>
                 </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is the largest country in Africa?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question2" id="answer1-question2">
-                            <label for="answer1-question2">Algeria</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question2" id="answer2-question2">
-                            <label for="answer2-question1">The Democratic Republic of the Congo</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question2" id="answer3-question2">
-                            <label for="answer3-question2">Madagascar</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback2"></div>
-                </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is the name of the organization that aims to promote economic
-                        cooperation
-                        among
-                        countries?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question3" id="answer1-question3">
-                            <label for="answer1-question3">The World Intellectual Property Organization</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question3" id="answer2-question3">
-                            <label for="answer2-question3">The Central Banks</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question3" id="answer3-question3">
-                            <label for="answer3-question3">The World Trade Organization</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback3"></div>
-                </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is called a situation in which a single company or group owns all or nearly all of the market for a given type of product or service?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question4" id="answer1-question4">
-                            <label for="answer1-question4">A monopoly</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question4" id="answer2-question4">
-                            <label for="answer2-question4">A monopsony</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question4" id="answer3-question4">
-                            <label for="answer3-question4">A oligopoly</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback4"></div>
-                </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is the largest mammal on Earth?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question5" id="answer1-question5">
-                            <label for="answer1-question5">The Elephant</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question5" id="answer2-question5">
-                            <label for="answer2-question5">The Hippopotamus</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question5" id="answer3-question5">
-                            <label for="answer3-question5">The Blue whale</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback5"></div>
-                </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is the definition of “plethora”?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question6" id="answer1-question6">
-                            <label for="answer1-question6">The use of unnecessary words to express an idea.</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question6" id="answer2-question6">
-                            <label for="answer2-question6">A large or excessive amount of something.</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question6" id="answer3-question6">
-                            <label for="answer3-question6">The state of being without or not having enough of something.</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback6"></div>
-                </div>
-
-                <div class="question-area">
-                    <h3 class="subject"></h3>
-                    <p class="question">What is Bandwagon pressuring?</p>
-                    <ul>
-                        <li>
-                            <input type="radio" name="answer-question7" id="answer1-question7">
-                            <label for="answer1-question7"> A type of advertising technique that aims to
-                                convince people to do something because everyone
-                                else is doing it.</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question7" id="answer2-question7">
-                            <label for="answer2-question7"> A technique which involves using words that sound impressive
-                                but
-                                don’t
-                                actually mean anything.</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="answer-question7" id="answer3-question7">
-                            <label for="answer3-question7">A technique that involves using celebrities or other
-                                well-known
-                                figures
-                                to promote a product or service.</label>
-                        </li>
-                    </ul>
-                    <div id="image-feedback7"></div>
-                </div>
-
-                <input type="submit" id="check" value="Check your answers">
-
             </form>
         </div>
 
