Add input in htlm with onclik event

--- a/quizz.html
+++ b/quizz.html
@@ -28,8 +28,10 @@
                 <p id="feedback"></p>
             </div>
         </header>
-        <div id="quizz-area">
-
+        <div>
+            <form action="GET" id="quizz-area">
+                <input type="submit" value="Check your answers" onclick="checkAnswers()">
+            </form>
         </div>
 
     </div>
