Delete checkAnswer in js

--- a/quizz.html
+++ b/quizz.html
@@ -30,7 +30,7 @@
         </header>
         <div>
             <form action="GET" id="quizz-area">
-                <input type="submit" value="Check your answers" onclick="checkAnswers()">
+                <input type="submit" value="Check your answers" onclick="getAnswers()">
             </form>
         </div>
 
