Delete form in quizz.html and move submit

--- a/quizz.html
+++ b/quizz.html
@@ -28,11 +28,8 @@
                 <p id="feedback"></p>
             </div>
         </header>
-        <div>
-            <form action="GET" id="quizz-area">
-                <input type="submit" value="Check your answers" onclick="getAnswers()">
-            </form>
-        </div>
+        <div id="quizz-area"></div>
+        <input type="submit" value="Check your answers" onclick="getAnswers()">
 
     </div>
 
