Add getRandomQuestion function

--- a/quizz.html
+++ b/quizz.html
@@ -25,7 +25,7 @@
 
         <div id="quizz-area">
             <form action="POST" class="question-area">
-                <h3 class="subject"></h3>
+                <h3 id="subject"></h3>
                 <ul>
                     <p class="question"></p>
                     <li>
