--- a/quizz.html
+++ b/quizz.html
@@ -31,7 +31,7 @@
 
                 <ul id="options"></ul>
 
-                <input type="submit" value="Submit" onclick="displayNextQuestion()">
+                <input type="submit" value="Submit" onclick="displayNextQuestion(event)">
             </form>
         </div>
     </div>
