Add loop in displayQuestions and input value

--- a/quizz.html
+++ b/quizz.html
@@ -31,7 +31,7 @@
 
                 <ul id="options"></ul>
 
-                <input type="submit" value="Submit" onclick="displayNextQuestion(event)">
+                <input type="submit" value="Submit" id="submit" data-type="submit" onclick="displayNextQuestion()">
             </form>
         </div>
     </div>
