--- a/quizz.html
+++ b/quizz.html
@@ -23,6 +23,10 @@
             </h1>
         </header>
 
+        <div id="score-area">
+            <p id="score">Correct Answers <span id="points">0</span>/7</p>
+        </div>
+
         <div id="quizz-area">
             <form action="POST" class="question-area">
                 <h3 id="subject"></h3>
