Update h3 in quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -29,7 +29,7 @@
 
         <div id="quizz-area">
             <form action="POST" class="question-area">
-                <h3 id="subject"></h3>
+                <h3>Question <span>1</span>: <span id="subject"></span></h3>
 
                 <p id="question"></p>
 
